added setup link

--- a/app/public/api/langs/us.json
+++ b/app/public/api/langs/us.json
@@ -77,5 +77,7 @@
     "Maps": "Maps",
     "My Profile": "My Profile",
     "Page Header": "Page Header",
-    "Subtitle": "Subtitle"
+    "Subtitle": "Subtitle",
+    "Setup": "Setup"
+
 }
